--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -72,7 +72,7 @@
           </li>
 
           <li class="{{isActiveRoute regex='ingredientsList'}}">
-            <a href="/ingredients"><i class="fa fa-list"></i> <span class="nav-label">Ingredients</span></a>
+            <a href="/ingredients"><i class="fa fa-list"></i> <span class="nav-label">Stocks</span></a>
           </li>
 
           {{#if state$isManagerOrAdmin}}
