main stocklist page-rough

--- a/client/views/main_views/ingredients/list_view.html
+++ b/client/views/main_views/ingredients/list_view.html
@@ -1,6 +1,6 @@
 <template name="ingredientsListMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Stock List' category="Ingredients" name="ingredientslist"}}
+  {{> render component="pageHeading" title='Stock List' category="Stocks" name="ingredientslist"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
