--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -72,7 +72,7 @@
           </li>
 
           <li class="{{isActiveRoute regex='ingredientsList'}}">
-            <a href="/ingredients"><i class="fa fa-list"></i> <span class="nav-label">Stocks</span></a>
+            <a href="/stocks"><i class="fa fa-list"></i> <span class="nav-label">Stocks</span></a>
           </li>
 
           {{#if state$isManagerOrAdmin}}
@@ -116,6 +116,10 @@
             <a href="/admin"><i class="fa -o fa-cog"></i> <span class="nav-label">Settings</span> </a>
           </li>
           {{/if}}
+
+          <li class="{{isActiveRoute regex='stocktake'}}">
+            <a href="/stocktake"><i class="fa fa-list"></i> <span class="nav-label">Stocktake</span> </a>
+          </li>
           <!-- {{/if}} -->
 
           <!-- <li class="{{isActiveRoute regex='cafeSalesForecast'}}">
