added basic views- stocktake

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -133,7 +133,10 @@
                 <a href="/stocktakeOrdering">Ordering</a>
               </li> 
               <li class="{{isActiveRoute name='suppleirOrdering'}}">
-                <a href="/suppleirOrder/supplierId">Suppler recipts</a>
+                <a href="/suppleirOrder/supplierId">Supplier recipts</a>
+              </li> 
+              <li class="{{isActiveRoute name='supplierOrderReceive'}}">
+                <a href="/supplierOrderReceive/supplierId">Supplier order receive</a>
               </li> 
             </ul>
           </li>
