--- a/client/views/main_views/stocktake/list_view.html
+++ b/client/views/main_views/stocktake/list_view.html
@@ -1,6 +1,6 @@
 <template name="stockListMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Stocktake List' category="Stocktake"}}
+  {{> render component="pageHeading" title='Stocktake List' category="Stocktake" name="stocktakeList"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
