--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -75,6 +75,30 @@
             <a href="/stocks"><i class="fa fa-list"></i> <span class="nav-label">Stocks</span></a>
           </li>
 
+          <li class="{{isActiveRoute name='stocktake|stocktakeCounting|stocktakeOrdering'}}">
+            <a href="#">
+              <i class="fa fa-list"></i>
+              <span class="nav-label">Stocktaking</span>
+            </a>
+            <ul class="nav nav-second-level {{isActiveRoute name='stocktake|stocktakeCounting|stocktakeOrdering' className='in'}}">
+              <li class="{{isActiveRoute name='stocktake'}}">
+                <a href="/stocktake">History</a>
+              </li>
+              <li class="{{isActiveRoute name='stocktakeCounting'}}">
+                <a href="/stocktakeCounting">New</a>
+              </li> 
+              <li class="{{isActiveRoute name='stocktakeOrdering'}}">
+                <a href="/stocktakeOrdering">Ordering</a>
+              </li> 
+              <li class="{{isActiveRoute name='suppleirOrdering'}}">
+                <a href="/suppleirOrder/supplierId">Supplier recipts</a>
+              </li> 
+              <li class="{{isActiveRoute name='supplierOrderReceive'}}">
+                <a href="/supplierOrderReceive/supplierId">Supplier order receive</a>
+              </li> 
+            </ul>
+          </li>
+
           {{#if state$isManagerOrAdmin}}
           <li class="{{isActiveRoute regex='salesCalibration|actualSales|cafeSalesForecast|weeklySalesForecastMenusList'}}">
             <a href="#">
@@ -116,30 +140,6 @@
             <a href="/admin"><i class="fa -o fa-cog"></i> <span class="nav-label">Settings</span> </a>
           </li>
           {{/if}}
-
-          <li class="{{isActiveRoute name='stocktake|stocktakeCounting|stocktakeOrdering'}}">
-            <a href="#">
-              <i class="fa fa-list"></i>
-              <span class="nav-label">Stocktake</span>
-            </a>
-            <ul class="nav nav-second-level {{isActiveRoute name='stocktake|stocktakeCounting|stocktakeOrdering' className='in'}}">
-              <li class="{{isActiveRoute name='stocktake'}}">
-                <a href="/stocktake">History</a>
-              </li>
-              <li class="{{isActiveRoute name='stocktakeCounting'}}">
-                <a href="/stocktakeCounting">Counting</a>
-              </li> 
-              <li class="{{isActiveRoute name='stocktakeOrdering'}}">
-                <a href="/stocktakeOrdering">Ordering</a>
-              </li> 
-              <li class="{{isActiveRoute name='suppleirOrdering'}}">
-                <a href="/suppleirOrder/supplierId">Supplier recipts</a>
-              </li> 
-              <li class="{{isActiveRoute name='supplierOrderReceive'}}">
-                <a href="/supplierOrderReceive/supplierId">Supplier order receive</a>
-              </li> 
-            </ul>
-          </li>
           <!-- {{/if}} -->
 
           <!-- <li class="{{isActiveRoute regex='cafeSalesForecast'}}">
