fix routing for stocktake

--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -147,7 +147,7 @@
 
       {{#if state$isStockTakeList}}
       <div class="title-action">
-        <a href="#" class="btn btn-primary">
+        <a href="/stocktake/new" class="btn btn-primary">
           Start New Stocktake
         </a>
       </div>
