--- a/client/lib/components/stocktake/order_receipts_list/view.html
+++ b/client/lib/components/stocktake/order_receipts_list/view.html
@@ -1,4 +1,4 @@
-<template name="supplierOrdersList">
+<template name="ordersReceiptsList">
   <div class="col-lg-12">
     <div class="ibox ">
       <div class="ibox-content">
@@ -36,7 +36,7 @@
               <td>$3255</td>
               <td>$3255</td>
               <td>
-                <a class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-check-square-o"></i>Receive this delivery now</a>
+                <a href="/stocktake/order/receive/id" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-check-square-o"></i>Receive this delivery now</a>
               </td>
             </tr>
           </tbody>
