--- a/client/lib/components/stocktake/order_receive/view.html
+++ b/client/lib/components/stocktake/order_receive/view.html
@@ -1,4 +1,4 @@
-<template name="supplierOrderReceive">
+<template name="orderReceive">
   <div class="col-lg-12">
     <div class="ibox ">
       <div class="ibox-content">
