--- a/client/views/main_views/stocktake/order_receipts_list.html
+++ b/client/views/main_views/stocktake/order_receipts_list.html
@@ -1,10 +1,10 @@
-<template name="supplierOrderingMainView">
+<template name="orderReceiptsListMainView">
   <!-- Page heading -->
   {{> render component="pageHeading" title='Suppleir Orders Recipt' category="Stocktake"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
-      {{> render component='supplierOrdersList'}}
+      {{> render component='ordersReceiptsList'}}
     </div>
   </div>
 </template>
