--- a/client/lib/components/stocktake/master_list/item/view.html
+++ b/client/lib/components/stocktake/master_list/item/view.html
@@ -4,8 +4,8 @@
     <td>$3255</td>
     <td>$2000</td>
     <td>
-      <a class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
-      <a class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View orders placed</a>
+      <a href="/stocktake/id" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
+      <a href="/stocktake/orders/id" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View orders placed</a>
     </td>
   </tr>
 </template>
