--- a/client/views/main_views/stocktake/counting_view.html
+++ b/client/views/main_views/stocktake/counting_view.html
@@ -1,6 +1,10 @@
 <template name="stocktakeCountingMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Stocktake Counting' category="Stocktake"}}
+  {{#if new}}
+    {{> render component="pageHeading" title='New Stocktake' category="Stocktake"}}
+  {{else}}
+    {{> render component="pageHeading" title='Stocktake Counting' category="Stocktake"}}
+  {{/if}}
 
   <div class="wrapper wrapper-content">
     {{> render component='stockCounting'}}
