--- a/client/views/main_views/stocktake/order_receive.html
+++ b/client/views/main_views/stocktake/order_receive.html
@@ -1,10 +1,10 @@
-<template name="supplierOrderReceiveMainView">
+<template name="orderReceiveMainView">
   <!-- Page heading -->
   {{> render component="pageHeading" title='Suppleir Orders Receive' category="Stocktake"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
-      {{> render component='supplierOrderReceive'}}
+      {{> render component='orderReceive'}}
     </div>
   </div>
 </template>
