--- a/client/views/main_views/admin/list.html
+++ b/client/views/main_views/admin/list.html
@@ -1,6 +1,6 @@
 <template name="adminMainView">
    <!-- Page heading -->
-  {{> render component="pageHeading" title="Admin" }}
+  {{> render component="pageHeading" title="Admin"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
@@ -12,6 +12,9 @@
             </li>
             <li class="">
               <a href="#sections" data-toggle="tab">Sections</a>
+            </li>
+            <li class="">
+              <a href="#areas" data-toggle="tab">Stock Areas</a>
             </li>
             <li class="">
               <a href="#details" data-toggle="tab">Details</a>
@@ -28,6 +31,10 @@
               </div>
               <div class="tab-pane" id="sections">
                 <strong>Sections</strong>
+                {{> render component='sections'}}
+              </div>
+              <div class="tab-pane" id="areas">
+                <strong>Stock Areas</strong>
                 {{> render component='sections'}}
               </div>
               <div class="tab-pane" id="details">
