--- a/client/views/main_views/admin/list.html
+++ b/client/views/main_views/admin/list.html
@@ -35,7 +35,7 @@
               </div>
               <div class="tab-pane" id="areas">
                 <strong>Stock Areas</strong>
-                {{> render component='sections'}}
+                {{> render component='stockAreas'}}
               </div>
               <div class="tab-pane" id="details">
                 <strong>Details</strong>
