adding new general and specific areas

--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -19,7 +19,9 @@
           <span class="pull-right">1 kg</span>
         </li>
       </ul>
-      <a class="btn btn-block btn-default btn-outline">Add stock item to this area<br></a>
+      <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area<br></a>
     </div>
   </div>
+
+
 </template>
