--- a/client/lib/components/stock_areas/item/view.html
+++ b/client/lib/components/stock_areas/item/view.html
@@ -2,12 +2,16 @@
   <li class="dd-item" data-id="{{state$area._id}}">
     <div class="dd-handle">{{state$area.name}}</div>
     <ol class="dd-list">
-      <li class="dd-item" data-id="3">
-        <div class="dd-handle">3 - Adipiscing elit</div>
+      <li class="dd-item" data-id="{{state$area._id}}">
+        <div class="dd-handle">
+          <input name="sarea" class="form-control sarea" placeholder="Type special section name here and press enter..."/>
+        </div>
       </li>
-      <li class="dd-item" data-id="4">
-        <div class="dd-handle">4 - Nonummy nibh</div>
+      {{#each state$specialAreas}}
+      <li class="dd-item" data-id="{{_id}}">
+        <div class="dd-handle">{{name}}</div>
       </li>
+      {{/each}}
     </ol>
   </li>
 </template>
