--- a/client/lib/components/stocktake/counting/area_filters/view.html
+++ b/client/lib/components/stocktake/counting/area_filters/view.html
@@ -1,49 +1,14 @@
 <template name="areaFilters">
   <div class="col-md-2 no-margin">
-    <a class="btn btn-block btn-info btn-sm">General Area 1
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 48%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-sm">General Area 2
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 48%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-sm">General Area 3
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 48%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-sm">General Area 4
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 48%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-outline">Add</a>
+    {{#each state$generalAreas}}
+      {{> render component="areaBox" item=this class="garea-filter"}}
+    {{/each}}
+    <a class="btn btn-block btn-default btn-outline addNewGArea">Add</a>
   </div>
   <div class="col-md-2">
-    <a class="btn btn-block btn-info btn-sm">Specific Area 1
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 90%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-sm">
-      <i class="fa fa-fw fa-reorder"></i> Specific Area 2
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 90%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-sm">Specific Area 3
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 90%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-sm">Specific Area 4
-      <div class="progress progress-mini">
-        <div class="progress-bar" style="width: 90%;"></div>
-      </div>
-    </a>
-    <a class="btn btn-block btn-default btn-outline">Add</a>
+    {{#each state$specialAreas}}
+      {{> render component="areaBox" item=this class="sarea-filter"}}
+    {{/each}}
+    <a class="btn btn-block btn-default btn-outline addNewSArea">Add</a>
   </div>
 </template>
