rename ingredient folder as stock

--- a/client/views/main_views/stock/list_view.html
+++ b/client/views/main_views/stock/list_view.html
@@ -1,4 +1,4 @@
-<template name="ingredientsListMainView">
+<template name="listOfStocksMasterMainView">
   <!-- Page heading -->
   {{> render component="pageHeading" title='Stock List' category="Stocks" name="ingredientslist"}}
 
