--- a/client/lib/components/stock/modal_list/stock_item/view.html
+++ b/client/lib/components/stock/modal_list/stock_item/view.html
@@ -1,4 +1,4 @@
-<template name="ingredientModalItem">
+<template name="stockModalItem">
   <tr>
     <td><a href="" data-toggle="modal" class="editIngredient">{{{state$item.code}}}</a></td>
     <td>{{{state$item.description}}}</td>
