--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -2,25 +2,29 @@
   <div class="row">
     <div class="col-lg-12">
       <a class="btn btn-primary btn-sm pull-right">Save stocktake &amp; generate orders<br></a>
-      <a class="btn btn-link btn-sm pull-right"><i class="fa fa-fw fa-edit"></i>Edit</a>
-      <a class="btn btn-link btn-sm pull-right"><i class="fa fa-fw fa-reorder"></i>Reorder</a>
-      {{dateFormat state$date}}
+      <!-- <a class="btn btn-link btn-sm pull-right"><i class="fa fa-fw fa-edit"></i>Edit</a>
+      <a class="btn btn-link btn-sm pull-right"><i class="fa fa-fw fa-reorder"></i>Reorder</a> -->
+      <a href="" id="newStocktakeDate">{{dateFormat state$date}}</a>
       <hr>
     </div>
   </div>
   
   <div class="row">
     {{> render component="areaFilters"}}
-    <div class="col-md-8">
-      <ul class="list-group">
-        {{#each state$list}}
-          {{> render component="stockCountingListItem" id=this}}
-        {{else}}
-          No items on this list
-        {{/each}}
-      </ul>
-      <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area<br></a>
-    </div>
+    {{#if state$filtered}}
+      <div class="col-md-8">
+        <ul class="list-group">
+          {{#each state$list}}
+            {{> render component="stockCountingListItem" id=this}}
+          {{else}}
+            No items on this list
+          {{/each}}
+        </ul>
+        <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area<br></a>
+      </div>
+    {{else}}
+      Select areas to show list of stock items
+    {{/if}}
   </div>
 
   <!-- STOCKS MODAL LIST-->
