--- a/client/lib/components/stocktake/counting/list_item/view.html
+++ b/client/lib/components/stocktake/counting/list_item/view.html
@@ -3,7 +3,7 @@
     <i class="fa fa-fw fa-reorder"></i>{{state$item.description}}
     <i class="fa fa-trash pull-right removeFromList"></i>
     <span class="pull-right">
-      <a href="" class="noOfPortions">1</a> &nbsp; [{{#if state$item.portionOrdered}} {{state$item.portionOrdered}} {{else}} {{state$item.portionUsed}} {{/if}}]
+      <a href="" class="counting">{{state$item.counting}}</a> &nbsp; [{{state$item.portionUsed}}]
     </span>
   </li>
 </template>
