added stocktaking and history viewing- fixed

--- a/client/lib/components/stocktake/master_list/item/view.html
+++ b/client/lib/components/stocktake/master_list/item/view.html
@@ -1,11 +1,11 @@
 <template name="stocktakeItem">
   <tr>
-    <td>21/12/15</td>
-    <td>$3255</td>
+    <td>{{dateFormat state$item._id}}</td>
+    <td>${{state$item.totalStockValue}}</td>
     <td>$2000</td>
     <td>
-      <a href="/stocktake/id" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
-      <a href="/stocktake/orders/id" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View orders placed</a>
+      <a href="/stocktake/{{dateFormat state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
+      <a href="/stocktake/orders/{{dateFormat state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View orders placed</a>
     </td>
   </tr>
 </template>
