--- a/client/lib/components/stocktake/master_list/list/view.html
+++ b/client/lib/components/stocktake/master_list/list/view.html
@@ -2,10 +2,6 @@
   <div class="col-lg-12">
     <div class="ibox ">
       <div class="ibox-content">
-        <!--DESIGN: These buttons are for each suppier included in the stocktake.
-        They need to be activated like tabs so that users can switch easily to
-        different suppliers.-->
-        <!--DEV: Only show the suppliers that are active for this order.-->
         <table class="table table-condensed table-hover table-striped">
           <thead>
             <tr>
@@ -15,13 +11,17 @@
               <th>Action</th>
             </tr>
           </thead>
+          {{#if state$listOfDates}}
           <tbody>
-            {{> render component='stocktakeItem'}}
+            {{#each state$listOfDates}}
+              {{> render component='stocktakeItem' item=this}}
+            {{/each}}
           </tbody>
+          {{else}}
+            No history
+          {{/if}}
         </table>
       </div>
-      <small class="text-info pull-right"></small>
     </div>
-    <small class="text-info pull-right"></small>
   </div>
 </template>
