--- a/client/views/layouts/not-found.html
+++ b/client/views/layouts/not-found.html
@@ -6,7 +6,7 @@
                 <p>
                     You can go back to main page (Dashboard)
                 </p>
-                <a href="{{pathFor name='home'}}" class="btn btn-sm btn-primary">Go to Dashboard</a>
+                <a href="{{pathFor route='home'}}" class="btn btn-sm btn-primary">Go to Dashboard</a>
             </div>
         </div>
     </div>
