--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -1,7 +1,7 @@
 <template name="stockCounting">
   <div class="row">
     <div class="col-lg-12">
-      <a class="btn btn-primary btn-sm pull-right">Save stocktake &amp; generate orders<br></a>
+      <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
       <a class="btn btn-link btn-sm pull-right"><i class="fa fa-fw fa-edit"></i>Edit</a>
       <a class="btn btn-link btn-sm pull-right reOrder"><i class="fa fa-fw fa-reorder"></i>Reorder</a>
       <a href="" id="newStocktakeDate">{{dateFormat state$date}}</a>
