--- a/client/lib/components/stocktake/master_list/item/view.html
+++ b/client/lib/components/stocktake/master_list/item/view.html
@@ -1,7 +1,7 @@
 <template name="stocktakeItem">
   <tr>
     <td>{{dateFormat state$item._id}}</td>
-    <td>${{state$item.totalStockValue}}</td>
+    <td>${{roundCount state$item.totalStockValue}}</td>
     <td>$2000</td>
     <td>
       <a href="/stocktake/{{dateFormat state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
