--- a/client/lib/components/stocktake/master_list/item/view.html
+++ b/client/lib/components/stocktake/master_list/item/view.html
@@ -2,7 +2,7 @@
   <tr>
     <td>{{dateFormat state$item._id}}</td>
     <td>${{roundCount state$item.totalStockValue}}</td>
-    <td>$2000</td>
+    <td>${{roundCount state$item.totalStockValue}}</td>
     <td>
       <a href="/stocktake/{{dateFormat state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
       <a href="/stocktake/orders/{{dateFormat state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View orders placed</a>
