--- a/client/stylesheets/13_index.css
+++ b/client/stylesheets/13_index.css
@@ -17,12 +17,17 @@
 }
 
 @media (min-width: 1200px) {
-  .col-lg-13 {
-    float: left;
+    .col-lg-13.first {
+        margin-left: 15px;
+    }
+    .col-lg-13 {
+        width: 13.4%;
+    }
+    .col-lg-13 {
+        float: left;
+        margin-left: 8px;
   }
-  .col-lg-13 {
-    width: 13.99999999%;
-  }
+
   .editable-input {
     vertical-align: top;
     display: -webkit-inline-box !important;
