--- a/client/views/head.html
+++ b/client/views/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <title>Hero Chef</title>
+    <title>Hospo Hero</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--
