Added ? with popovers to weekly figure panels.

--- a/client/lib/components/roster/weekly/week/view.html
+++ b/client/lib/components/roster/weekly/week/view.html
@@ -4,7 +4,9 @@
         <div class="col-md-4" data-pg-collapsed>
             <div class="ibox">
                 <div class="ibox-content">
-                    <i class="fa fa-question-circle pull-right"></i>
+                    <button class="btn btn-sm pull-right btn-link" data-toggle="popover" type="button" data-content="The figure shows the actual sales result from the days in the past plus the forecast sales for the rest of the week. So you can see if you're on track.">
+                        <i class="fa fa-question-circle pull-right"></i>
+                    </button>
                     <h5>Sales</h5>
                     <h1 class="no-margins">$22,000</h1>
                     <div class="stat-percent font-bold text-navy">10%
@@ -17,7 +19,9 @@
         <div class="col-md-4" data-pg-collapsed>
             <div class="ibox">
                 <div class="ibox-content">
-                    <i class="fa fa-question-circle pull-right"></i>
+                    <button class="btn btn-sm pull-right btn-link" data-toggle="popover" type="button" data-content="The figure shows the actual staff cost result from the days in the past plus the forecast staff cost for the rest of the week. So you can see if you're on track.">
+                        <i class="fa fa-question-circle pull-right"></i>
+                    </button>
                     <h5>Staff Cost</h5>
                     <h1 class="no-margins">$11,000</h1>
                     <div class="stat-percent font-bold text-danger">10%
@@ -30,7 +34,9 @@
         <div class="col-md-4" data-pg-collapsed>
             <div class="ibox">
                 <div class="ibox-content">
-                    <i class="fa fa-question-circle pull-right"></i>
+                    <button class="btn btn-sm pull-right btn-link" data-toggle="popover" type="button" data-content="The figure shows the % of wages compared to sales. It take the actual results from past days and forecasts from future days.">
+                        <i class="fa fa-question-circle pull-right"></i>
+                    </button>
                     <h5>Staff Cost</h5>
                     <h1 class="no-margins">50%</h1>
                     <div class="stat-percent font-bold text-danger">5%
