--- a/client/lib/components/jobItems/detail/view.html
+++ b/client/lib/components/jobItems/detail/view.html
@@ -73,7 +73,7 @@
             <div class="col-md-3">
               <ul class="list-group clear-list m-t">
                 <li class="list-group-item">
-                  <span class="pull-right">{{state$job.type}}</span>Type
+                  <span class="pull-right">{{jobTypeById state$job.type}}</span>Type
                 </li>
                 {{#if state$isRecurring}}
                 <li class="list-group-item">
