--- a/client/lib/components/jobItems/edit/view.html
+++ b/client/lib/components/jobItems/edit/view.html
@@ -21,8 +21,9 @@
                 <label class="col-sm-2 control-label">Type</label>
                 <div class="col-sm-10">
                   <select name="type" class="form-control changeType">
-                    {{#each state$typesWithSelected}}
-                    <option value="{{index}}" selected="{{selected}}">{{index}}</option>
+                    <option value="{{state$item.type}}">{{jobTypeById state$item.type}}</option>
+                    {{#each state$jobTypes}}
+                    <option value="{{_id}}">{{name}}</option>
                     {{/each}}
                   </select>
                 </div>
