--- a/client/lib/components/jobItems/submit/view.html
+++ b/client/lib/components/jobItems/submit/view.html
@@ -14,8 +14,9 @@
         <label class="col-sm-2 control-label">Type</label>
         <div class="col-sm-10">
           <select name="type" class="form-control changeType">
-            <option value="Prep">Prep</option>
-            <option value="Recurring">Recurring</option>
+            {{#each state$jobtypes}}
+              <option value="{{_id}}">{{name}}</option>
+            {{/each}}
           </select>
         </div>
       </div> 
