--- a/client/lib/components/jobItems/master_list/list/view.html
+++ b/client/lib/components/jobItems/master_list/list/view.html
@@ -13,15 +13,19 @@
             <tr>
               <th>Name</th>
               <th>Active Time (mins) </th>
-              <th>Shelf Life (Days)</th>
-              <th>Portions</th>
-              <th>Cost per Portion ($)</th>
+              {{#if state$showSection}}
+                <th>Section</th>
+              {{else}}
+                <th>Shelf Life (Days)</th>
+                <th>Portions</th>
+                <th>Cost per Portion ($)</th>
+              {{/if}}
               <th>Action</th>
             </tr>
           </thead>
           <tbody>
             {{#each state$getJobItems}}
-              {{> render component='jobItemDetailed' jobitem=this}}
+              {{> render component='jobItemDetailed' jobitem=this type=state$type}}
             {{/each}}
           </tbody>
         </table>
