--- a/client/lib/components/jobItems/master_list/item/view.html
+++ b/client/lib/components/jobItems/master_list/item/view.html
@@ -2,9 +2,13 @@
   <tr data-id="{{state$job._id}}">
     <td><a href="#" data-toggle="modal" class="viewDetail">{{{state$job.name}}}</a></td>
     <td>{{secondsToMinutes state$job.activeTime}} mins</td>
-    <td>{{#if state$job.shelfLife}}{{state$job.shelfLife}} days {{else}} -NA- {{/if}}</td>
-    <td>{{#if state$job.portions}} {{state$job.portions}} {{else}} -NA- {{/if}}</td>
-    <td>{{#if state$isPrep}} $ {{state$cost}} {{else}} -NA-{{/if}}</td>
+    {{#if state$showSection}}
+      <td>{{sectionById state$job.section}}</td>
+    {{else}}
+      <td>{{#if state$job.shelfLife}}{{state$job.shelfLife}} days {{else}} -NA- {{/if}}</td>
+      <td>{{#if state$job.portions}} {{state$job.portions}} {{else}} -NA- {{/if}}</td>
+      <td>{{#if state$isPrep}} $ {{state$cost}} {{else}} -NA-{{/if}}</td>
+    {{/if}}
     <td>
       <button class="btn btn-primary btn-sm viewDetail">View Item</button>
     </td>
