--- a/client/lib/components/jobItems/master_list/list/view.html
+++ b/client/lib/components/jobItems/master_list/list/view.html
@@ -15,6 +15,7 @@
               <th>Active Time (mins) </th>
               {{#if state$showSection}}
                 <th>Section</th>
+                <th>Frequency</th>
               {{else}}
                 <th>Shelf Life (Days)</th>
                 <th>Portions</th>
