comment panel fix on flyout

--- a/client/lib/components/comments/comments_panel/view.html
+++ b/client/lib/components/comments/comments_panel/view.html
@@ -20,7 +20,7 @@
               </div>
               {{/if}}
             </div>
-            {{> render component="submitComment"}}
+            {{> render component="submitComment" id=state$id type=state$type}}
           </div>
           <!-- {{> render component="chatUsersList"}} -->
         </div>
