--- a/client/lib/components/jobItems/detail/view.html
+++ b/client/lib/components/jobItems/detail/view.html
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="row m-t-lg">
-          {{> render component='commentsPanel'}}
+          {{> render component='commentsPanel' id=state$job._id type='job'}}
         </div>
       </div>
     </div>
