comment button fix

--- a/client/lib/components/dashboard/newsfeed/view.html
+++ b/client/lib/components/dashboard/newsfeed/view.html
@@ -1,7 +1,9 @@
 <template name="newsFeed">
-    <div class="ibox-content text-center">
-        <h3 class="m-b-xxs">News Feed</h3>
-        <!--<small>News full block with incorporate avatar picture</small>-->
+    <div class="ibox">
+        <div class="ibox-content text-center">
+            <h3 class="m-b-xxs">News Feed</h3>
+            <!--<small>News full block with incorporate avatar picture</small>-->
+        </div>
     </div>
     <div class="feed-activity-list">
         <div class="feed-element">
