Modidity comment on newsfeed

--- a/client/stylesheets/globals/pages.import.less
+++ b/client/stylesheets/globals/pages.import.less
@@ -1059,7 +1059,9 @@ del {
   padding: 10px 15px;
   background: #f9f9f9;
 }
-
+.social-padding{
+  padding:0px !important;
+}
 .social-footer .social-comment img {
   width: 32px;
   margin-right: 10px;
@@ -1078,11 +1080,13 @@ del {
 }
 
 .comment_field .form-group{
+  height:48px;
   margin:0px;
+  margin-left: 5px;
 }
 
 .comment_field a{
-  margin-top:4px;
+  margin-top:7px;
 }
 
 .social-avatar a.thumbsup-like {
