modify comments on newsfeed

--- a/client/stylesheets/globals/pages.import.less
+++ b/client/stylesheets/globals/pages.import.less
@@ -675,10 +675,6 @@ dd.project-people {
   //height: 90px !important;
 }
 
-.comment_field {
-  display: none;
-}
-
 .chat-avatar {
   white: 36px;
   height: 36px;
@@ -1079,13 +1075,11 @@ del {
   font-size: 12px;
 }
 
-.comment_field .form-group{
+.social-footer .form-group{
   height:48px;
   margin:0px;
-  margin-left: 5px;
 }
-
-.comment_field a{
+.social-footer .form-group a{
   margin-top:7px;
 }
 
