--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -1,10 +1,19 @@
 <template name="stockCounting">
   <div class="row">
     <div class="col-lg-12">
-      <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
-      <a class="btn btn-link btn-sm pull-right"><i class="fa fa-fw fa-edit"></i>Edit</a>
-      <a class="btn btn-link btn-sm pull-right reOrder"><i class="fa fa-fw fa-reorder"></i>Reorder</a>
-      <a href="" id="newStocktakeDate">{{dateFormat state$date}}</a>
+      {{#if state$editable}}
+        <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
+      {{else}}
+        <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit</a>
+      {{/if}}
+      {{#if state$editable}}
+        <a class="btn btn-link btn-sm pull-right reOrder"><i class="fa fa-fw fa-reorder"></i>Reorder</a>
+      {{/if}}
+      {{#if state$editable}}
+        <a href="" id="newStocktakeDate">{{dateFormat state$date}}</a>
+      {{else}}
+        {{dateFormat state$date}}
+      {{/if}}
       <hr>
     </div>
   </div>
@@ -20,7 +29,9 @@
             No items on this list
           {{/each}}
         </ul>
-        <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area<br></a>
+        {{#if state$editable}}
+          <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area<br></a>
+        {{/if}}
       </div>
     {{else}}
       Select areas to show list of stock items
