fix issues till order generating

--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -147,7 +147,7 @@
 
       {{#if state$isStockTakeList}}
       <div class="title-action">
-        <a href="/stocktake/{{state$date}}" class="btn btn-primary">
+        <a href="" class="btn btn-primary" id="startNewStocktake">
           Start New Stocktake
         </a>
       </div>
