--- a/client/lib/components/stocktake/counting/list_item/view.html
+++ b/client/lib/components/stocktake/counting/list_item/view.html
@@ -2,7 +2,7 @@
   <li class="list-group-item" data-id="{{state$item._id}}" data-stockRef="{{state$item.stockRef}}">
     <!-- <i class="fa fa-fw fa-reorder"></i> -->
     {{state$item.description}}
-    <i class="fa fa-trash pull-right removeFromList">{{state$ordering}}</i>
+    <i class="fa fa-trash pull-right removeFromList"></i>
     <span class="pull-right">
       <a href="" class="counting">{{state$item.counting}}</a> &nbsp; [{{state$item.portionOrdered}}]
     </span>
