order receipt created

--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -4,6 +4,9 @@
       {{#if state$editable}}
         <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
       {{else}}
+        {{#if state$ordersExist}}
+          <a class="btn btn-primary btn-sm pull-right" href="/stocktake/orders/{{dateFormat state$date}}">View Orders placed<br></a>
+        {{/if}}
         <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit</a>
       {{/if}}
       {{#if state$editable}}
