--- a/client/lib/components/stocktake/ordering/supplier_filter/view.html
+++ b/client/lib/components/stocktake/ordering/supplier_filter/view.html
@@ -8,22 +8,25 @@
   {{/each}}
   <hr>
   <h2>{{state$activeSupplier}}
-    <small class="text-info pull-right">
+    <!-- <small class="text-info pull-right"> -->
     <!-- Set this date with x editable -->
-    {{#if state$deliveryDate}}
-      {{formatDate state$deliveryDate}}
-    {{/if}}
     <!--DEV: Mail button - opens modal with draft email to send to supplier. -->
-     <!--  <a class="btn btn-primary orderByEmail">
+    {{#if state$receipt}}
+      <small class="text-info pull-right"><i class="fa fa-fw fa-check"></i>Status: {{state$orderSentDetails}}</small>
+      {{#if state$receipt.expectedDeliveryDate}}
+        <small class="text-success pull-right">Expected delivery on {{timeFormattedWithDate state$receipt.expectedDeliveryDate}}</small>
+      {{/if}}
+    {{else}}
+      <a class="btn btn-primary setOrder" data-type="emailed">
         <i class="fa fa-envelope-o fa-fw fa-lg"></i>Send email
-      </a> -->
+      </a>
     <!--DEV: Phone button - Marks the order as have been phones through and what time it has been marked. -->
-      <!-- <a class="btn btn-primary orderByPhone">
+      <a class="btn btn-primary setOrder" data-type="phoned">
         <i class="fa fa-fw fa-lg fa-phone"></i>Mark as phoned through
-      </a> -->
+      </a>
+    {{/if}}
     <!--DEV: This shows the success state when the order is marked as sent or called through, buttons should disappear, this status message should be displayed -->
-      <!-- <i class="fa fa-fw fa-check"></i>Status: email sent 15th of June 10:51am -->
-    </small>
+    <!-- </small> -->
   </h2>
   <hr>
 </template>
