--- a/client/lib/components/stocktake/ordering/item/view.html
+++ b/client/lib/components/stocktake/ordering/item/view.html
@@ -7,6 +7,13 @@
       <!--DEV: The 'to order' number needs to be editable with x editable.
       This allows the user to adjust the order before they send it. -->
       <td><a href="#" class="orderingCount">{{state$order.countOrdered}} </a>[{{state$order.unit}}]</td>
+      {{#if state$supplier}}
+      {{else}}
+        <td>
+          <a href="" class="removeStockOrder">Delete</a>
+          <!-- |<a>Add to supplier</a> -->
+        </td>
+      {{/if}}
     </tr>
   {{/if}}
 </template>
