fix minor issues

--- a/client/lib/components/stocktake/counting/areas/area_filters/view.html
+++ b/client/lib/components/stocktake/counting/areas/area_filters/view.html
@@ -3,12 +3,16 @@
     {{#each state$generalAreas}}
       {{> render component="areaBox" item=this class="garea-filter" name="garea"}}
     {{/each}}
-    <a class="btn btn-block btn-default btn-outline addNewGArea">Add</a>
+    {{#if state$editable}}
+      <a class="btn btn-block btn-default btn-outline addNewGArea">Add</a>
+    {{/if}}
   </div>
   <div class="col-md-2">
     {{#each state$specialAreas}}
       {{> render component="areaBox" item=this class="sarea-filter" name="sarea"}}
     {{/each}}
-    <a class="btn btn-block btn-default btn-outline addNewSArea">Add</a>
+    {{#if state$editable}}
+      <a class="btn btn-block btn-default btn-outline addNewSArea">Add</a>
+    {{/if}}
   </div>
 </template>
