--- a/client/lib/components/stocktake/counting/list_item/view.html
+++ b/client/lib/components/stocktake/counting/list_item/view.html
@@ -1,10 +1,13 @@
 <template name="stockCountingListItem">
   <li class="list-group-item" data-id="{{state$item._id}}" data-stockRef="{{state$item.stockRef}}">
-    <!-- <i class="fa fa-fw fa-reorder"></i> -->
+    {{#if state$editable}}
+      <i class="fa fa-fw fa-reorder"></i>
+    {{/if}}
     {{state$item.description}}
-    {{#if state$item.status}}
-    {{else}}
-      <i class="fa fa-trash pull-right removeFromList"></i>
+    {{#if state$editable}}
+      {{#if state$deletable state$item.stockRef}}
+        <i class="fa fa-trash pull-right removeFromList"></i>
+      {{/if}}
     {{/if}}
     <span class="pull-right">
       <a href="" class="counting">{{state$item.counting}}</a> &nbsp; [{{state$item.portionOrdered}}]
