--- a/client/lib/components/stocktake/order_receipts/list/view.html
+++ b/client/lib/components/stocktake/order_receipts/list/view.html
@@ -15,31 +15,6 @@
         </div>
         <hr>
         <table class="table table-condensed table-hover table-striped">
-          <tbody>
-            <tr>
-              <td>21/12/15</td>
-              <td>Supplier name</td>
-              <td>$3255</td>
-              <!--this amount is entered by xeditable by user receiving the
-              delivery-->
-              <td>$3115</td>
-              <td>
-                <a class="btn btn-link">Delivery received by User @ 23/13/15 10.31am</a>
-              </td>
-              <td>
-                <a class="btn btn-link"><i class="-o -square-o fa fa-check fa-fw fa-lg text-primary"></i></a>
-              </td>
-            </tr>
-            <tr>
-              <td>21/12/15</td>
-              <td>Supplier name</td>
-              <td>$3255</td>
-              <td>$3255</td>
-              <td>
-                <a href="/stocktake/order/receive/id" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-check-square-o"></i>Receive this delivery now</a>
-              </td>
-            </tr>
-          </tbody>
           <thead>
             <tr>
               <th>Date expected</th>
@@ -50,6 +25,11 @@
               <th>Invoice Uploaded</th>
             </tr>
           </thead>
+          <tbody>
+            {{#each state$list}}
+              {{> render component="orderReceiptItem" item=this}}
+            {{/each}}
+          </tbody>
         </table>
       </div>
       <small class="text-info pull-right"></small>
