--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -81,4 +81,10 @@
     {{> render component='notifiModal'}}
   </div>
   <!-- /NOTIFICATION MODAL -->
+
+  <!-- NEW STOCKTAKE MODAL-->
+  <div class="modal fade" id="newStocktakeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'newStocktakeModal' name="stockModal"}}
+  </div>
+  <!-- /NEW STOCKTAKE MODAL -->
 </template>
