--- a/client/lib/components/stocktake/master_list/item/view.html
+++ b/client/lib/components/stocktake/master_list/item/view.html
@@ -1,10 +1,10 @@
 <template name="stocktakeItem">
-  <tr>
-    <td>{{dateFormat state$item._id}}</td>
+  <tr data-id="{{state$item._id}}">
+    <td>{{dateFormat state$item.date}}</td>
     <td>${{roundCount state$item.totalStockValue}}</td>
     <td>
-      <a href="/stocktake/{{dateFormat state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
-      <a href="/stocktake/orders/{{dateFormat state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View orders placed</a>
+      <a href="/stocktake/{{state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View stocktake</a>
+      <a href="/stocktake/orders/{{state$item._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-eye"></i>View orders placed</a>
     </td>
   </tr>
 </template>
